--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
-components
-components/index.js
+#components
+#components/index.js
 
 # Bower dependency directory (https://bower.io/)
 bower_components
@@ -85,3 +85,6 @@ typings/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Local Netlify folder
+.netlify
